--- a/EDA_recomendacion.ipynb
+++ b/EDA_recomendacion.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4          Sidney Lumet                                    Reginald Rose  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "max    250.000000  2022.000000    9.300000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "[250 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "9          Drama,Mystery,War     8.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3533,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3564,7 +3564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -6846,7 +6846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -7918,7 +7918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -8826,7 +8826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -9733,7 +9733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -9761,142 +9761,7 @@
             "Capernaum",
             "Green Book",
             "Avengers: Infinity War",
-            "Spider-Man: Into the Spider-Verse",
-            "Coco",
-            "Logan",
-            "Three Billboards Outside Ebbing, Missouri",
-            "Your Name.",
-            "Hacksaw Ridge",
-            "The Handmaiden",
-            "Dangal",
-            "Room",
-            "Mad Max: Fury Road",
-            "Spotlight",
-            "Inside Out",
-            "Whiplash",
-            "Gone Girl",
-            "Wild Tales",
-            "The Grand Budapest Hotel",
-            "Interstellar",
-            "12 Years a Slave",
-            "The Wolf of Wall Street",
-            "Prisoners",
-            "Rush",
-            "Django Unchained",
-            "The Hunt",
-            "The Dark Knight Rises",
-            "The Help",
-            "Warrior",
-            "A Separation",
-            "The Intouchables",
-            "Harry Potter and the Deathly Hallows: Part 2",
-            "Toy Story 3",
-            "How to Train Your Dragon",
-            "Inception",
-            "Shutter Island",
-            "Incendies",
-            "Hachi: A Dog's Tale",
-            "Mary and Max",
-            "Up",
-            "3 Idiots",
-            "Inglourious Basterds",
-            "The Secret in Their Eyes",
-            "Gran Torino",
-            "WALL·E",
-            "The Dark Knight",
-            "Ratatouille",
-            "There Will Be Blood",
-            "Like Stars on Earth",
-            "Into the Wild",
-            "No Country for Old Men",
-            "Pan's Labyrinth",
-            "The Departed",
-            "The Prestige",
-            "The Lives of Others",
-            "V for Vendetta",
-            "Batman Begins",
-            "My Father and My Son",
-            "Hotel Rwanda",
-            "Before Sunset",
-            "The Incredibles",
-            "Million Dollar Baby",
-            "Howl's Moving Castle",
-            "Eternal Sunshine of the Spotless Mind",
-            "Downfall",
-            "The Lord of the Rings: The Return of the King",
-            "Kill Bill: Vol. 1",
-            "Memories of Murder",
-            "Oldboy",
-            "Pirates of the Caribbean: The Curse of the Black Pearl",
-            "Finding Nemo",
-            "City of God",
-            "The Lord of the Rings: The Two Towers",
-            "The Pianist",
-            "Catch Me If You Can",
-            "The Lord of the Rings: The Fellowship of the Ring",
-            "Spirited Away",
-            "Monsters, Inc.",
-            "Amélie",
-            "A Beautiful Mind",
-            "Gladiator",
-            "Snatch",
-            "Memento",
-            "Requiem for a Dream",
-            "Amores Perros",
-            "The Green Mile",
-            "The Iron Giant",
-            "Fight Club",
-            "The Sixth Sense",
-            "American Beauty",
-            "The Matrix",
-            "Lock, Stock and Two Smoking Barrels",
-            "The Truman Show",
-            "Saving Private Ryan",
-            "American History X",
-            "The Big Lebowski",
-            "L.A. Confidential",
-            "Children of Heaven",
-            "Good Will Hunting",
-            "Princess Mononoke",
-            "Life Is Beautiful",
-            "Trainspotting",
-            "Fargo",
-            "Se7en",
-            "The Usual Suspects",
-            "La haine",
-            "Toy Story",
-            "Braveheart",
-            "Heat",
-            "Before Sunrise",
-            "Casino",
-            "Forrest Gump",
-            "Pulp Fiction",
-            "The Shawshank Redemption",
-            "Léon: The Professional",
-            "The Lion King",
-            "Groundhog Day",
-            "In the Name of the Father",
-            "Schindler's List",
-            "Jurassic Park",
-            "Unforgiven",
-            "Aladdin",
-            "Reservoir Dogs",
-            "Terminator 2: Judgment Day",
-            "The Silence of the Lambs",
-            "Dances with Wolves",
-            "Goodfellas",
-            "Dead Poets Society",
-            "Indiana Jones and the Last Crusade",
-            "Grave of the Fireflies",
-            "Cinema Paradiso",
-            "My Neighbor Totoro",
-            "Die Hard",
-            "Full Metal Jacket",
-            "Aliens",
-            "Stand by Me",
-            "Platoon",
-            "Back to the Future",
-            "Come and See"
+            "Spider-Man: Into the Spider-Verse"
            ],
            [
             2022,
@@ -9913,142 +9778,7 @@
             2018,
             2018,
             2018,
-            2018,
-            2017,
-            2017,
-            2017,
-            2016,
-            2016,
-            2016,
-            2016,
-            2015,
-            2015,
-            2015,
-            2015,
-            2014,
-            2014,
-            2014,
-            2014,
-            2014,
-            2013,
-            2013,
-            2013,
-            2013,
-            2012,
-            2012,
-            2012,
-            2011,
-            2011,
-            2011,
-            2011,
-            2011,
-            2010,
-            2010,
-            2010,
-            2010,
-            2010,
-            2009,
-            2009,
-            2009,
-            2009,
-            2009,
-            2009,
-            2008,
-            2008,
-            2008,
-            2007,
-            2007,
-            2007,
-            2007,
-            2007,
-            2006,
-            2006,
-            2006,
-            2006,
-            2005,
-            2005,
-            2005,
-            2004,
-            2004,
-            2004,
-            2004,
-            2004,
-            2004,
-            2004,
-            2003,
-            2003,
-            2003,
-            2003,
-            2003,
-            2003,
-            2002,
-            2002,
-            2002,
-            2002,
-            2001,
-            2001,
-            2001,
-            2001,
-            2001,
-            2000,
-            2000,
-            2000,
-            2000,
-            2000,
-            1999,
-            1999,
-            1999,
-            1999,
-            1999,
-            1999,
-            1998,
-            1998,
-            1998,
-            1998,
-            1998,
-            1997,
-            1997,
-            1997,
-            1997,
-            1997,
-            1996,
-            1996,
-            1995,
-            1995,
-            1995,
-            1995,
-            1995,
-            1995,
-            1995,
-            1995,
-            1994,
-            1994,
-            1994,
-            1994,
-            1994,
-            1993,
-            1993,
-            1993,
-            1993,
-            1992,
-            1992,
-            1992,
-            1991,
-            1991,
-            1990,
-            1990,
-            1989,
-            1989,
-            1988,
-            1988,
-            1988,
-            1988,
-            1987,
-            1986,
-            1986,
-            1986,
-            1985,
-            1985
+            2018
            ]
           ]
          },
@@ -10892,7 +10622,7 @@
     }
    ],
    "source": [
-    "peliculas_recientes=df.sort_values(by='year', ascending=False)[0:150]\n",
+    "peliculas_recientes=df.sort_values(by='year', ascending=False)[0:15]\n",
     "fig = go.Figure(data=[go.Table(header=dict(values=['Nombre de la Película', 'Año de Lazamiento'], fill_color='lightgreen'),\n",
     "                 cells=dict(values=[peliculas_recientes['name'],peliculas_recientes['year']]))\n",
     "                     ])\n",
@@ -10909,7 +10639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -10952,7 +10682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -10977,7 +10707,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
