--- a/EDA_recomendacion.ipynb
+++ b/EDA_recomendacion.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4          Sidney Lumet                                    Reginald Rose  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "max    250.000000  2022.000000    9.300000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "[250 rows x 16 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>genre</th>\n",
+       "      <th>Género</th>\n",
        "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -843,7 +843,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                       genre  rating\n",
+       "                      Género  rating\n",
        "0          Adventure,Western     8.8\n",
        "1     Action,Adventure,Drama     8.7\n",
        "2     Adventure,Drama,Sci-Fi     8.6\n",
@@ -856,7 +856,7 @@
        "9          Drama,Mystery,War     8.5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
     "df['rating'] = pd.to_numeric(df['rating'], errors='coerce') #Asegurarse de que la columna 'rating' esté en formato numérico\n",
     "\n",
     "top_rates = df.groupby('genre')['rating'].mean().sort_values(ascending=False).head(10) # Agrupar el DataFrame por el campo 'genre' y calcula el promedio de las calificaciones para cada grupo\n",
-    "top_rates_df = pd.DataFrame({'genre': top_rates.index, 'rating': top_rates.values}).round(2) #Crear un nuevo DataFrame con los resultados\n",
+    "top_rates_df = pd.DataFrame({'Género': top_rates.index, 'rating': top_rates.values}).round(2) #Crear un nuevo DataFrame con los resultados\n",
     "top_rates_df"
    ]
   },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3533,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3564,7 +3564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -6846,7 +6846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -7918,7 +7918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -8821,12 +8821,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Gráfico de tabla que proporciona una visualización clara de las 15 películas más antiguas, mostrando su nombre y año de lanzamiento."
+    "- Gráfico de tabla que proporciona una visualización clara de las 10 películas más antiguas, mostrando su nombre y año de lanzamiento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -8849,12 +8849,7 @@
             "M",
             "City Lights",
             "It Happened One Night",
-            "Modern Times",
-            "Mr. Smith Goes to Washington",
-            "Gone with the Wind",
-            "The Wizard of Oz",
-            "Rebecca",
-            "The Great Dictator"
+            "Modern Times"
            ],
            [
             1921,
@@ -8866,12 +8861,7 @@
             1931,
             1931,
             1934,
-            1936,
-            1939,
-            1939,
-            1939,
-            1940,
-            1940
+            1936
            ]
           ]
          },
@@ -9715,7 +9705,7 @@
     }
    ],
    "source": [
-    "peliculas_antiguas= df.sort_values(by='year')[0:15]\n",
+    "peliculas_antiguas= df.sort_values(by='year')[0:10]\n",
     "\n",
     "fig = go.Figure(data=[go.Table(header=dict(values=['Nombre de la Película', 'Año de Lanzamiento'],fill_color='lightgreen'),\n",
     "                 cells=dict(values=[peliculas_antiguas['name'],peliculas_antiguas['year']]))\n",
@@ -9728,12 +9718,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Gráfico de tabla que proporciona una visualización clara de las 15 películas más recientes, mostrando su nombre y año de lanzamiento."
+    "- Gráfico de tabla que proporciona una visualización clara de las 10 películas más recientes, mostrando su nombre y año de lanzamiento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -9756,12 +9746,7 @@
             "Parasite",
             "Ford v Ferrari",
             "Avengers: Endgame",
-            "Klaus",
-            "Joker",
-            "Capernaum",
-            "Green Book",
-            "Avengers: Infinity War",
-            "Spider-Man: Into the Spider-Verse"
+            "Klaus"
            ],
            [
             2022,
@@ -9773,12 +9758,7 @@
             2019,
             2019,
             2019,
-            2019,
-            2019,
-            2018,
-            2018,
-            2018,
-            2018
+            2019
            ]
           ]
          },
@@ -10622,7 +10602,7 @@
     }
    ],
    "source": [
-    "peliculas_recientes=df.sort_values(by='year', ascending=False)[0:15]\n",
+    "peliculas_recientes=df.sort_values(by='year', ascending=False)[0:10]\n",
     "fig = go.Figure(data=[go.Table(header=dict(values=['Nombre de la Película', 'Año de Lazamiento'], fill_color='lightgreen'),\n",
     "                 cells=dict(values=[peliculas_recientes['name'],peliculas_recientes['year']]))\n",
     "                     ])\n",
@@ -10639,7 +10619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -10682,7 +10662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -10707,7 +10687,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10715,36 +10695,6 @@
    "source": [
     "certificate_counts = df['certificate'].value_counts()\n",
     "certificate_counts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Esto es lo que significan los certificados:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Certificado | Significado                                                               | Descripción                                                                                                                                                                                                                    |\n",
-    "|-------------|---------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| R           | Realmente, no apta para niños.                                            | Espera mucha violencia, escenas de sexo y lenguaje fuerte. Definitivamente no es adecuada para niños, se aconseja precaución para espectadores sensibles. No es recomendable llevar a tu abuela a ver esta película.           |\n",
-    "| PG          | Bastante buena para niños.                                                | Generalmente apta para niños con algún lenguaje o violencia leve. En general, segura para los más pequeños, pero puede requerir la guía de los padres.                                                                         |\n",
-    "| PG-13       | Se recomienda precaución a los padres al llevar a sus adolescentes.       | Diseñada para adolescentes mayores que pueden manejar más acción e intensidad. Se aconseja a los padres que tengan cuidado, ya que el contenido puede no ser adecuado para menores de 13 años.                                 |\n",
-    "| Sin Clasif. | No tenemos idea de lo que hay en esta película.                           | Una categoría impredecible donde la película no ha recibido una clasificación específica. Los espectadores deben estar preparados para cualquier cosa y el contenido es impredecible.                                          |\n",
-    "| G           | Apta para todos.                                                          | Segura para todas las audiencias, incluyendo los espectadores más jóvenes. Por lo general, presenta contenido adecuado para el público en general, como animales cantando y finales felices.                                   |\n",
-    "| Aprobada    | Aprobada por los censores como \"Aceptable para la visualización pública\". | Una clasificación antigua que indica que la película ha sido aprobada por los censores y se considera adecuada para la visualización pública.                                                                                  |\n",
-    "| Aprobada    | Declarada \"Aceptable para todas las audiencias\" por los censores.         | Otra clasificación antigua que implica que la película ha sido aprobada por los censores y es aceptable para todas las audiencias.                                                                                             |\n",
-    "| 18+         | No apta para cardiacos.                                                   | Similar a una película con clasificación R, pero más intensa. No es adecuada para niños, y se recomienda la discreción del espectador.                                                                                         |\n",
-    "| No Dispon.  | Tendrás que verla para descubrirlo.                                       | La clasificación del contenido es desconocida o no se ha divulgado. Los espectadores deben descubrir el contenido sin información previa.                                                                                      |\n",
-    "| TV-PG       | Bastante buena para la televisión.                                        | Similar a la clasificación PG de películas, pero para programas de televisión. Adecuada para un público general con cierta orientación parental sugerida. A menudo apropiada para programas de comedia familiar.               |\n",
-    "| Sin Clasif. | No ha sido clasificada por los censores aún.                              | La película no ha pasado por el proceso de clasificación, y los espectadores deben tener precaución ya que el contenido es desconocido.                                                                                        |\n",
-    "| X           | Calificación XXX.                                                         | Indica contenido explícito con énfasis en escenas de sexo y desnudez. No es adecuada para un público general o para una primera cita.                                                                                          |\n",
-    "| 13+         | Para preadolescentes y adolescentes.                                      | Similar a PG-13, pero para programas de televisión. Destinada a espectadores de 13 años en adelante, puede contener contenido inapropiado para audiencias más jóvenes.                                                         |\n",
-    "| TV-MA       | Solo para audiencias maduras.                                             | Similar a una película con clasificación R, pero para programas de televisión. Destinada a audiencias maduras debido a la inclusión de violencia, escenas de sexo y lenguaje fuerte. Se aconseja la discreción del espectador. |\n",
-    "| GP          | Audiencia general, se sugiere la guía de los padres.                      | Similar a PG, pero se alienta a los padres a involucrarse más en decidir si es adecuado para sus hijos.                                                                                                                        |"
    ]
   },
   {
